Fix minor issue where elements would be shifted down when adjusting page width

--- a/index.css
+++ b/index.css
@@ -32,13 +32,13 @@ h1, h2, h3, h4, h5 {
 /*Left Block*/
 
 .welcome {
-	margin-top: 50%;
+	margin-top: 33vh;
 }
 
 .formContainer {
 	height: 50%;
 }
-form {
+.newPostForm {
 	margin-top: 10%;
 	height: 75%;
 }
@@ -54,7 +54,7 @@ input {
 }
 
 .autoUpdateCheckbox {
-	padding-top: 40px;
+	padding-top: 80px;
 }
 .checkboxText {
 	color: white;
